--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -7,7 +7,7 @@ jobs:
   web-deploy:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
-    environment: main
+    environment: master
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v4
